# What-Even

./: README.md  pyproject.toml
what_even/: __init__.py  what_even.py
what_even/tests/: test_is_even.py  test_is_odd.py
