[tool.poetry]
name = "whateven"
version = "1.0"
description = "What even? Its odd ain't it"
authors = ["Syafiq Termizi <73152242+SyafiqTermizi2010@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SyafiqTermizi2010/What-Event-"
repository = "https://github.com/SyafiqTermizi2010/What-Event-"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
packages = [
    { include = "what_even" },
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "what_even/tests/test_is_even.py",
    "what_even/tests/test_is_odd.py",
]